skip JWT authentication for OPTIONS requests to resolve preflight CORS errors